<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UnusedResources">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/view_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/string_text"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/title_view_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/view_app_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/string_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/view_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/string_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_view_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/view_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_text"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/view_error"
            android:text="@string/title_view_error"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/view_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/string_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/view_error_icon"
            android:text="@string/title_view_error_icon"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/view_error_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/string_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_view_append"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/view_append"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_view_append_range"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/view_append_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_view_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/view_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_view_text_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/view_text_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_text" />

        <Button
            android:id="@+id/button_alert_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_alert_dialog" />

        <Button
            android:id="@+id/button_alert_dialog_legacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_alert_dialog_legacy" />

        <Button
            android:id="@+id/button_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_snackbar" />

        <Button
            android:id="@+id/button_snackbar_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_snackbar_update" />

        <Button
            android:id="@+id/button_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_toast" />

        <Button
            android:id="@+id/button_toast_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_toast_update" />
    </LinearLayout>
</ScrollView>
